--- a/css/scss/partials/_typography.scss
+++ b/css/scss/partials/_typography.scss
@@ -88,6 +88,9 @@ h6 {
   @include text-shadow;
 }
 
+.project-heading {
+  text-align: center;
+}
 
 /**
  * ---------------------------------------
@@ -100,8 +103,7 @@ h6 {
 }
 
 p {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
+  margin: 1.5em 0 0 0;
 }
 
 /**
